--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon ./src/server.js",
     "start": "node ./src/server.js",
-    "test": "yarn test"
+    "test": "yarn jest"
   },
   "dependencies": {
     "cors": "^2.8.5",
